# nix-flake-generator

./: README.md  flake.nix
generator/: Cargo.toml
generator/src/: embedded_templates.rs
generator/tests/integration/: combination_tests.rs  common.rs  comprehensive_tests.rs  coverage_tests.rs  single_template_tests.rs
nix-parser/src/: lib.rs
nix-parser/src/templates/: ruby.nix  rust.nix
